--- a/app/src/main/res/layout/activity_vehicle_detail.xml
+++ b/app/src/main/res/layout/activity_vehicle_detail.xml
@@ -4,41 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VehicleDetail"
-    android:padding="15dp">
+    tools:context=".VehicleDetail">
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="?android:dividerHorizontal"
-        android:showDividers="middle"
-        android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Konečná:"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:textColor="#808080"
-        />
+        android:orientation="vertical"
+        android:padding="15dp">
 
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textStyle="normal"
-            android:textSize="18sp"
-            android:textColor="#000"
-            />
+            android:id="@+id/lineLabel"
+            android:text="Linka:"
+            style="@style/labelTextView" />
+
+        <TextView
+            android:id="@+id/line"
+            style="@style/valueTextView" />
+
+        <TextView
+            android:id="@+id/terminalLabel"
+            android:text="Konečná stanice:"
+            style="@style/labelTextView" />
+
+        <TextView
+            android:id="@+id/terminal"
+            style="@style/valueTextView" />
+
+        <TextView
+            android:id="@+id/lastLabel"
+            android:text="Poslední stanice:"
+            style="@style/labelTextView" />
+
+        <TextView
+            android:id="@+id/last"
+            style="@style/valueTextView" />
+
+        <TextView
+            android:id="@+id/delayLabel"
+            android:text="Zpoždení:"
+            style="@style/labelTextView" />
+
+        <TextView
+            android:id="@+id/delay"
+            style="@style/valueTextView" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
