--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,30 @@
         android:layout_height="match_parent" >
     </com.esri.arcgisruntime.mapping.view.MapView>
 
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/mapKey"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="30dp"
+        android:layout_marginRight="15dp"
+        android:src="@drawable/info"
+        android:scaleType="fitCenter"
+        android:padding="10dp"
+        android:background="#FFF"/>
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/mapFilter"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        app:layout_constraintEnd_toStartOf="@id/mapKey"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="30dp"
+        android:layout_marginRight="2dp"
+        android:src="@drawable/filter"
+        android:scaleType="fitCenter"
+        android:padding="10dp"
+        android:background="#FFF" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
