--- a/app/src/main/res/layout/activity_map_key.xml
+++ b/app/src/main/res/layout/activity_map_key.xml
@@ -36,6 +36,16 @@
         android:src="@drawable/trolleybus"
         android:rotation="90" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/waitingIcon"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toBottomOf="@id/trolleybusIcon"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="15dp"
+        android:src="@drawable/waiting"
+        android:rotation="90" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/busText"
         app:layout_constraintTop_toBottomOf="@id/mapKeyText"
@@ -47,20 +57,33 @@
         android:layout_marginTop="15dp"
         android:text="autobus"
         android:gravity="center"
-        android:layout_marginLeft="15dp" />
+        android:layout_marginStart="15dp" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/trolleybusText"
-        app:layout_constraintTop_toBottomOf="@id/busText"
-        app:layout_constraintStart_toEndOf="@id/trolleybusIcon"
+    android:id="@+id/trolleybusText"
+    app:layout_constraintTop_toBottomOf="@id/busText"
+    app:layout_constraintStart_toEndOf="@id/trolleybusIcon"
+    android:layout_width="wrap_content"
+    android:layout_height="45dp"
+    style="@style/labelTextView"
+    android:textSize="18sp"
+    android:layout_marginTop="15dp"
+    android:text="trolejbus"
+    android:gravity="center"
+    android:layout_marginStart="15dp" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/waitingText"
+        app:layout_constraintTop_toBottomOf="@id/trolleybusText"
+        app:layout_constraintStart_toEndOf="@id/waitingIcon"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
         style="@style/labelTextView"
         android:textSize="18sp"
         android:layout_marginTop="15dp"
-        android:text="trolejbus"
+        android:text="čekající vozidlo"
         android:gravity="center"
-        android:layout_marginLeft="15dp" />
+        android:layout_marginStart="15dp" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/credits"
@@ -72,6 +95,6 @@
         android:textSize="18sp"
         android:text="Vytvořeno ve spolupráci s\nDopravním podnikem města Jihlavy a.s.\na\nodborem informatiky\nStatutárního města Jihlava"
         android:gravity="center"
-        android:layout_marginLeft="15dp" />
+        android:layout_marginStart="15dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
