--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,18 @@
         android:src="@drawable/filter"
         android:scaleType="fitCenter"
         android:padding="10dp"
-        android:background="#FFF" />
+        android:background="#FFF"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/cancelFilterButton"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        app:layout_constraintEnd_toStartOf="@id/mapFilter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="30dp"
+        android:layout_marginRight="2dp"
+        android:padding="10dp"
+        android:text="Zrušit filtr"
+        android:background="#fff"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
