--- a/app/src/main/res/layout/activity_vehicle_detail.xml
+++ b/app/src/main/res/layout/activity_vehicle_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".debug.VehicleDetail">
+    tools:context=".activities.VehicleDetailActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
