--- a/app/src/main/res/layout/activity_departures.xml
+++ b/app/src/main/res/layout/activity_departures.xml
@@ -10,4 +10,18 @@
         android:id="@+id/departures"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/noItemsText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Nebyl nalezen žádný odpovídající záznam"
+        style="@style/labelTextView"
+        android:textSize="18dp"
+        android:textAlignment="center"
+        android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
