--- a/app/src/main/res/layout/connection_query.xml
+++ b/app/src/main/res/layout/connection_query.xml
@@ -1,7 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/timeLabel"
+            style="@style/labelTextView"
+            android:text="Čas:" />
+
+        <EditText
+            android:id="@+id/time"
+            android:inputType="none"
+            style="@style/valueTextView"/>
+
+        <TextView
+            android:id="@+id/dateLabel"
+            style="@style/labelTextView"
+            android:text="Datum:" />
+
+        <EditText
+            android:id="@+id/date"
+            android:inputType="none"
+            style="@style/valueTextView"/>
+
+        <TextView
+            android:id="@+id/startStopLabel"
+            style="@style/labelTextView"
+            android:text="Ze zastávky:" />
+
+        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
+            android:id="@+id/startStop"
+            style="@style/valueTextView" />
+
+        <TextView
+            android:id="@+id/targetStopLabel"
+            style="@style/labelTextView"
+            android:text="Do zastávky:" />
+
+        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
+            android:id="@+id/targetStop"
+            style="@style/valueTextView" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
