--- a/app/src/main/res/layout/activity_map_filter.xml
+++ b/app/src/main/res/layout/activity_map_filter.xml
@@ -24,7 +24,7 @@
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Filtrovat"
+        android:text="@string/map_filter_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:textColor="#FFF"
