--- a/app/src/main/res/layout/activity_departures.xml
+++ b/app/src/main/res/layout/activity_departures.xml
@@ -19,9 +19,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Nebyl nalezen žádný odpovídající záznam"
+        android:text="@string/no_items_found"
         style="@style/labelTextView"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textAlignment="center"
         android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
