--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="30dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         android:src="@drawable/info"
         android:scaleType="fitCenter"
         android:padding="10dp"
@@ -32,7 +32,7 @@
         app:layout_constraintEnd_toStartOf="@id/mapKey"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="30dp"
-        android:layout_marginRight="2dp"
+        android:layout_marginEnd="2dp"
         android:src="@drawable/filter"
         android:scaleType="fitCenter"
         android:padding="10dp"
@@ -45,9 +45,9 @@
         app:layout_constraintEnd_toStartOf="@id/mapFilter"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="30dp"
-        android:layout_marginRight="2dp"
+        android:layout_marginEnd="2dp"
         android:padding="10dp"
-        android:text="Zrušit filtr"
+        android:text="@string/map_cancel_filter"
         android:background="#fff"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
