--- a/app/src/main/res/layout/busstop_departure_list_item_caret.xml
+++ b/app/src/main/res/layout/busstop_departure_list_item_caret.xml
@@ -11,26 +11,27 @@
             android:layout_height="70dp"
             android:layout_weight="0.15"
             android:gravity="center"
-            android:textSize="15sp"
-            android:textStyle="bold"/>
+            android:textSize="20sp"
+            android:textStyle="bold"
+            style="@style/blueText"/>
 
         <TextView
             android:id="@+id/name"
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_weight="0.55"
-            android:gravity="left|center_vertical"
-            android:textSize="15sp"
-            android:textStyle="bold"/>
+            android:gravity="start|center_vertical"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/departure"
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_weight="0.20"
-            android:gravity="right|center_vertical"
-            android:paddingRight="15dp"
-            android:textSize="15sp"
+            android:gravity="end|center_vertical"
+            android:paddingEnd="15dp"
+            android:paddingStart="10dp"
+            android:textSize="16sp"
             android:textStyle="bold"/>
 
         <androidx.appcompat.widget.AppCompatImageView
