--- a/app/src/main/res/layout/map_object_selection_list_item.xml
+++ b/app/src/main/res/layout/map_object_selection_list_item.xml
@@ -13,14 +13,15 @@
         android:layout_weight="0.15"
         android:gravity="center"
         android:padding="13dp"
-        tools:srcCompat="@drawable/bus_stop" />
+        tools:srcCompat="@drawable/bus_stop"
+        android:contentDescription="@string/map_object_selection_image_contentDescription"/>
 
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:layout_weight="0.85"
-        android:gravity="left|center_vertical"
+        android:gravity="start|center_vertical"
         android:textSize="15sp"
         android:textStyle="bold"/>
 </LinearLayout>
