--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,11 +3,18 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#024DA8</item>
+        <item name="colorPrimaryDark">#013069</item>
+        <item name="colorAccent">#1B7DF5</item>
+        <item name="android:navigationBarColor">#013069</item>
+        <item name="android:textColor">#483D3F</item>
+        <item name="android:windowBackground">#FFFCF9</item>
         <item name="android:datePickerStyle">@style/MyDatePicker</item>
         <item name="android:timePickerStyle">@style/MyTimePicker</item>
+    </style>
+    
+    <style name="blueText">
+        <item name="android:textColor">#024DA8</item>
     </style>
 
     <style name="valueTextView" >
@@ -16,7 +23,6 @@
         <item name="android:paddingBottom">10dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:textColor">#000</item>
     </style>
 
     <style name="labelTextView" >
