--- a/app/src/main/res/layout/busstop_departure_list_item_caret.xml
+++ b/app/src/main/res/layout/busstop_departure_list_item_caret.xml
@@ -38,6 +38,6 @@
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_weight="0.10"
-            android:src="@drawable/caret_right"/>
+            android:src="@mipmap/caret_right"/>
 
 </LinearLayout>
