--- a/app/src/main/res/layout/activity_bus_stop_detail.xml
+++ b/app/src/main/res/layout/activity_bus_stop_detail.xml
@@ -58,7 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/no_items_found"
         style="@style/labelTextView"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textAlignment="center"
         android:visibility="gone"/>
 
