--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="30dp"
         android:layout_marginEnd="15dp"
-        android:src="@drawable/info"
+        android:src="@mipmap/info"
         android:scaleType="fitCenter"
         android:padding="10dp"
         android:background="#FFF"/>
@@ -33,7 +33,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="30dp"
         android:layout_marginEnd="2dp"
-        android:src="@drawable/filter"
+        android:src="@mipmap/filter"
         android:scaleType="fitCenter"
         android:padding="10dp"
         android:background="#FFF"/>
