--- a/app/src/main/res/layout/actual_departures_query.xml
+++ b/app/src/main/res/layout/actual_departures_query.xml
@@ -9,7 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/elpStopLabel"
