time independent favourites, spinner items ordering

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,8 @@
         <item name="colorAccent">#1B7DF5</item>
         <item name="android:navigationBarColor">#013069</item>
         <item name="android:textColor">#483D3F</item>
-        <item name="android:windowBackground">#FFFCF9</item>
+        <item name="android:windowBackground">@drawable/background</item>
+        <item name="android:colorBackground">#FFFCF9</item>
         <item name="android:datePickerStyle">@style/MyDatePicker</item>
         <item name="android:timePickerStyle">@style/MyTimePicker</item>
     </style>
