time independent favourites, spinner items ordering

--- a/app/src/main/res/values/urls.xml
+++ b/app/src/main/res/values/urls.xml
@@ -4,4 +4,5 @@
     <string name="gis_url_lines_map" translatable="false">https://gis.jihlava-city.cz/server/rest/services/ost/Ji_MHD_aktualni/MapServer/4</string>
     <string name="gis_url_stops" translatable="false">https://gis.jihlava-city.cz/server/rest/services/ost/Ji_MHD_aktualni/MapServer/3</string>
     <string name="gis_url_vehicles" translatable="false">https://gis.jihlava-city.cz/server/rest/services/ost/Ji_MHD_aktualni/MapServer/6</string>
+    <string name="offline_files_url" translatable="false">http://testalbum.8u.cz/dpmjinfoserver/API/mobileUploadsAPI.php?fileType=%1$s&amp;toDate=%2$s&amp;limit=1</string>
 </resources>
