--- a/app/src/main/res/layout/map_filter_list_item.xml
+++ b/app/src/main/res/layout/map_filter_list_item.xml
@@ -5,14 +5,23 @@
     android:weightSum =" 1"
     android:layout_height="wrap_content">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:src="@mipmap/bus_icon"
+        android:paddingStart="15dp"
+        />
+
     <androidx.appcompat.widget.AppCompatCheckedTextView
         android:id="@+id/checkedTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         style="@style/valueTextView"
         android:checked="true"
         android:checkMark="?android:attr/listChoiceIndicatorMultiple"
         android:padding="15dp"
         android:gravity="center_vertical"
+        android:textSize="20sp"
+        android:textStyle="bold"
         />
 </LinearLayout>
